test/Fail/Sigma-syntax-8.agda
open import Agda.Builtin.Sigma

postulate
  _ : (let A = Set) (x) Set
